[project]
name = "raindrop2rss"
version = "0.1.0"
description = "Tools to get unsorted links from raindrop.io and publish them as an RSS feed."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedgen>=1.0.0",
    "raindrop-io-py>=0.4.1",
]

[dependency-groups]
dev = [
    "pylint>=3.3.3",
    "ruff>=0.7.4",
]
