[project]
name = "raindrop2rss"
version = "0.1.1"
description = "Tools to get unsorted links from raindrop.io and publish them as an RSS feed."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedgen>=1.0.0",
    "pydantic<3.0.0",
    "raindrop-io-py",
]

[dependency-groups]
dev = [
    "pylint>=3.3.3",
    "ruff>=0.7.4",
]

[tool.ruff]
target-version = "py311"
lint.select = [
    "PL",   # Pylint
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific
]
lint.ignore = [
    "E501",  # line too long, handled by black
]
fix = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.uv.sources]
raindrop-io-py = { path = "raindrop-io-py-fork", editable = true }

[tool.ruff.lint.pydocstyle]
convention="google"
